# speaking-test

./: .gitignore  CONTINUE.md  README.md  prompt  pyproject.toml  questions_answers.csv  questions_answers_updated.csv
docs/: architecture.md  deep-research-report.md  ielts_band9_answers.md  ielts_pdf_writing_integration_codex_guide.md  ielts_questions.md  ielts_speaking_master_pack_v2.md  ielts_speaking_question_bank.md  interview-spec.md  project-overview.md  seed_writing_handover.md  spec.md  writing-prompt-extraction.md
scripts/: build_seed_json.py  extract_text_writing.py  extract_writing_prompts.py  ingest_pdf.py  ocr_extract_writing.py  seed_writing_prompts.json  seed_writing_prompts.py  verify_writing_prompts.py
src/speaking_test/: __init__.py  app.py  database.py  eval_logger.py  evaluator.py  gemini_evaluator.py  models.py  ollama_evaluator.py  questions.py  review.py  scorer.py  writing_questions.py
